# fileupload-fastapi

./: .dockerignore  .flake8  .gitignore  Dockerfile  Dockerfile.prod  README.md  docker-compose-prod.yml  docker-compose.yml  pyproject.toml  techstack.md  techstack.yml
app/: config.py  db.py  main.py
app/api/: crud.py  ping.py  uploads.py
app/core/: file_utils.py
app/models/: pydantic.py  upload.py  user.py
db/: Dockerfile
tests/: conftest.py  test_ping.py  test_uploads.py
